refactor (backend): make new login route and fixes some bugs
